--- a/css/main.scss
+++ b/css/main.scss
@@ -48,7 +48,7 @@ a {
     display: table;
     clear: both;
   }
-  max-width: 800px;
+  max-width: 700px;
   padding: 0 30px;
   margin: 0 auto;
   zoom: 1;
@@ -193,11 +193,11 @@ a {
     letter-spacing: -1px;
     line-height: 1;
   }
-  .post-date {
-    display: block;
-    font-size: 15px;
-    color: #818181;
-  }
+}
+
+.rss-subscribe {
+	font-size: 0.9em;
+	padding-top: 1em;
 }
 
 /* Post styles */
@@ -211,6 +211,7 @@ a {
     line-height: 1;
     font-weight: 300;
   }
+
   .meta {
     font-size: 15px;
     color: #818181;
@@ -233,8 +234,14 @@ a {
     letter-spacing: -1.25px;
   }
   h3 {
-    font-size: 26px;
-    letter-spacing: -1px;
+  	font-size: 24px;
+	margin-bottom: 0em;
+  } 
+  .post-date {
+    display: block;
+    font-size: 15px;
+    color: #818181;
+    margin-bottom: 1em;
   }
   h4 {
     font-size: 20px;
@@ -249,35 +256,33 @@ a {
     font-style: italic;
     margin: 30px 0;
   }
-  ul, ol {
-    padding-left: 20px;
-  }
+
+  .post-body {
+	  
+  }     
 }
 
 .post {
   pre {
-    border: 1px solid #666;
-    background-color: #555;
+    border: 1px solid #555;
+    background-color: #444;
     padding: 8px 12px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    font-size: 15px;
+    font-size: 14px;
     overflow: scroll;
   }
   code {
-    border: 1px solid #666;
-    background-color: #555;
+    border: 1px solid #555;
+    background-color: #444;
     padding: 8px 12px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    font-size: 15px;
+    font-size: 14px;
     overflow: scroll;
     padding: 1px 5px;
-  }
-  ul, ol {
-    margin-left: 1.35em;
   }
   pre {
     code {
@@ -296,6 +301,28 @@ a {
         background-color: #333;
       }
     }
+  }
+  p {
+	  hyphens: auto;
+	  -webkit-hyphens: auto;
+	  text-align: justify;
+  }
+  table {
+  	  border-collapse: collapse;
+  	  width: 100%;
+  
+	  th {
+		  text-align: left;
+		  padding: 0.8em;
+		  margin: 0;
+		  border-bottom: 1px solid white;
+	  }
+	  td {
+		  padding: 0.8em;
+		  margin: 0;
+		  text-align: justify;
+		  hyphens: auto;
+	  }
   }
 }
 
@@ -446,6 +473,20 @@ a {
   .il {
     color: #009999;
   }
+}
+
+.apps {
+	.app {
+		vertical-align: middle;
+	}
+	.appicon {
+		width: 64px;
+	}
+	.appname {
+	}
+	a {
+		color: white;
+	}
 }
 
 /* Comment */
