--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ a {
 
 .site-title {
   display: block;
-  color: #fff;
+  color: #bbb;
   font-size: 26px;
   letter-spacing: -1px;
   float: left;
@@ -62,7 +62,7 @@ a {
   z-index: 1; }
   .site-title:hover, .site-title:visited {
     display: block;
-    color: #fff;
+    color: #bbb;
     font-size: 26px;
     letter-spacing: -1px;
     float: left;
@@ -77,7 +77,7 @@ a {
     display: none; }
   .site-nav .page-link {
     margin-left: 20px;
-    color: #fff;
+    color: #bbb;
     letter-spacing: -.5px; }
 
 /* Site footer */
@@ -140,7 +140,7 @@ a {
 .page-content {
   padding: 30px 0;
   background-color: #2a2a2a;
-  color: #eee; }
+  color: #bbb; }
 
 /* Home styles */
 /* ----------------------------------------------------------*/
@@ -248,7 +248,7 @@ a {
     text-align: left;
     padding: 0.8em;
     margin: 0;
-    border-bottom: 1px solid white; }
+    border-bottom: 1px solid #bbb; }
   .post table td {
     padding: 0.8em;
     margin: 0;
@@ -259,7 +259,7 @@ a {
 /* Syntax highlighting styles */
 /* ----------------------------------------------------------*/
 .highlight {
-  background: #ffffff; }
+  background: #bbb; }
   .highlight .c {
     color: #999988;
     font-style: italic; }
@@ -364,7 +364,7 @@ a {
 .apps .appicon {
   width: 32px; }
 .apps a {
-  color: white; }
+  color: #bbb; }
 
 /* Comment */
 /* Error */
